Confirgurado jwt, criado rota login, documentacao login, validacao jwt
